hotel details page for mobile

--- a/app/js/.jshintrc
+++ b/app/js/.jshintrc
@@ -16,7 +16,9 @@
   "dojo": false,
 
   "predef": [ // Custom globals.
-    "validator"
+    "validator",
+    "define",
+    "module"
   ],
 
   // Development.
