email template for flights

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "grunt-jscs": "^1.6.0",
     "grunt-newer": "^1.1.0",
     "grunt-notify": "^0.4.1",
+    "grunt-premailer": "^0.2.13",
     "jit-grunt": "^0.9.*",
     "jshint-stylish": "^1.0.*",
     "node-static": "^0.7.6",
