--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "bugs": {
     "url": "https://github.com/tukangslicing/shopee-1212/issues"
   },
+  "engines": {
+    "node": "4.2.1"
+  },
   "dependencies": {
     "async": "^0.9.0",
     "cors": "^2.7.1",
