--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "author": "Tukangslicing.com",
   "engines": {
-    "node": "~0.10.x"
+    "node": "4.2.1"
   },
   "main": "server.js",
   "repository": {
@@ -15,12 +15,10 @@
   "bugs": {
     "url": "https://github.com/tukangslicing/shopee-1212/issues"
   },
-  "engines": {
-    "node": "4.2.1"
-  },
   "dependencies": {
-    "async": "^0.9.0",
+    "async": "^0.9.2",
     "cors": "^2.7.1",
+    "cron": "^1.0.9",
     "express": "^4.13.3",
     "grunt": "latest",
     "grunt-autoprefixer": "latest",
@@ -40,6 +38,7 @@
     "grunt-notify": "^0.4.1",
     "jit-grunt": "^0.9.*",
     "jshint-stylish": "^1.0.*",
+    "lodash": "^3.10.1",
     "mongoose": "^4.2.8",
     "node-static": "^0.7.6",
     "open": "0.0.5",
