fixing sliders and tweet API

--- a/static/js/.jshintrc
+++ b/static/js/.jshintrc
@@ -19,7 +19,9 @@
     "validator",
     "define",
     "module",
-    "tweetParser"
+    "moment",
+    "tweetParser",
+    "Mustache"
   ],
 
   // Development.
