--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,8 @@ build/Release
 node_modules
 .DS_Store
 resources
-app/css
-app/js/bootstrap.js
-app/js/plugins.js
-app/js/shopee-1212.js
+static/css
+static/js/bootstrap.js
+static/js/plugins.js
+static/js/shopee-1212.js
 static/*.html
