--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "grunt-contrib-clean": "latest",
     "grunt-contrib-concat": "latest",
     "grunt-contrib-cssmin": "latest",
+    "grunt-contrib-htmlmin": "^0.6.0",
     "grunt-contrib-imagemin": "latest",
     "grunt-contrib-jshint": "latest",
     "grunt-contrib-less": "latest",
