--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "async": "^0.9.2",
+    "compression": "^1.6.0",
     "cors": "^2.7.1",
     "cron": "^1.0.9",
     "express": "^4.13.3",
